# VVVCreator

./: .gitignore  EditMacroDialog.Designer.cs  LICENSE  MacroData.cs  MacroDefinition.cs  MainForm.Designer.cs  MainForm.cs  MinimumWhatToDoNext.html  Program.cs  README.md  TargetCreator.cs  VVVCreator.csproj  VVVCreator.sln  VVVCreator.slnx
TargetCreation/: If.cs  MacroData.cs  MacroDefinition.cs  (+3 more)
TargetCreation/Template/OrganelleCommonLibrary/Content/common/##LIBRARY_NAME##/: ##LIBRARY_NAME##.vcxproj  ##LIBRARY_NAME##.vcxproj.filters  ##LIBRARY_NAME##_l.vcxproj  ##LIBRARY_NAME##_l.vcxproj.filters  CMakeLists.txt
TargetCreation/Template/OrganelleCommonLibrary/Content/common/##LIBRARY_NAME##/header/: pch.h
TargetCreation/Template/OrganelleCommonLibrary/Content/common/##LIBRARY_NAME##/include/: ##LIBRARY_NAME##.h
TargetCreation/Template/OrganelleCommonLibrary/Content/common/##LIBRARY_NAME##/source/: ##UND_LIBRARY_NAME##.cpp
TargetCreation/Template/OrganelleModule/Content/module/##MODULE_NAME##/: ##MODULE_NAME##.vcxproj  ##MODULE_NAME##.vcxproj.filters  ##MODULE_NAME##_l.vcxproj  ##MODULE_NAME##_l.vcxproj.filters  CMakeLists.txt
TargetCreation/Template/OrganelleModule/Content/module/##MODULE_NAME##/header/: pch.h
TargetCreation/Template/OrganelleModule/Content/module/##MODULE_NAME##/resource/: ##MODULE_NAME##.rc
TargetCreation/Template/OrganelleModule/Content/module/##MODULE_NAME##/source/: ##MODULE_NAME##.cpp  pch.cpp
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/: ##PACKAGE_NAME##.slnx  ##PACKAGE_NAME##_linux.sln  ##PACKAGE_NAME##_windows.sln  .gitignore  CMakeLists.txt
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/configuration/##PACKAGE_NAME##_dna/: ##PACKAGE_NAME##_dna.vcxproj  ##PACKAGE_NAME##_dna.vcxproj.filters  ##PACKAGE_NAME##_dna_l.vcxproj  CMakeLists.txt
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/configuration/##PACKAGE_NAME##_dna/schema/: ##PACKAGE_NAME##.xsd
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/interface/c/##PACKAGE_NAME##_c_direct_dll/: ##PACKAGE_NAME##_c_direct_dll.def  ##PACKAGE_NAME##_c_direct_dll.vcxproj  ##PACKAGE_NAME##_c_direct_dll.vcxproj.filters
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/interface/c/##PACKAGE_NAME##_c_direct_dll/source/: ##PACKAGE_NAME##_c_direct_dll.cpp
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/interface/c/##PACKAGE_NAME##_c_direct_static/: ##PACKAGE_NAME##_c_direct_static.vcxproj  ##PACKAGE_NAME##_c_direct_static.vcxproj.filters
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/interface/c/##PACKAGE_NAME##_c_direct_static/source/: family_x.cpp
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/interface/include/: vvv_c_family_x.h
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/interface/language/##PACKAGE_NAME##_dotnet/: ##PACKAGE_NAME##_dotnet.projitems  ##PACKAGE_NAME##_dotnet.shproj  FamilyX.cs
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/interface/test/##PACKAGE_NAME##_dotnet_test/: ##PACKAGE_NAME##_dotnet_test.csproj  Program.cs
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/interface/test/##PACKAGE_NAME##_dotnet_test/Properties/: AssemblyInfo.cs
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/collection/##PACKAGE_NAME##/: ##PACKAGE_NAME##.vcxproj  ##PACKAGE_NAME##.vcxproj.filters  ##PACKAGE_NAME##_l.vcxproj  CMakeLists.txt
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/collection/##PACKAGE_NAME##/header/: pch.h
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/collection/##PACKAGE_NAME##/source/: pch.cpp
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/collection/include/: ##PACKAGE_NAME##_library.h
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/common/##PACKAGE_NAME##_message/: ##PACKAGE_NAME##_message.vcxproj  ##PACKAGE_NAME##_message_l.vcxproj  ##PACKAGE_NAME##_message_l.vcxproj.filters  CMakeLists.txt
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/common/##PACKAGE_NAME##_symbiosis/: ##PACKAGE_NAME##_symbiosis.vcxproj  ##PACKAGE_NAME##_symbiosis_l.vcxproj  ##PACKAGE_NAME##_symbiosis_l.vcxproj.filters  CMakeLists.txt
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/common/##PACKAGE_NAME##_symbiosis/header/: pch.h
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/common/##PACKAGE_NAME##_symbiosis/source/: ##UND_PACKAGE_NAME##_package.cpp  pch.cpp
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/common/include/: ##PACKAGE_NAME##_exception.h  ##PACKAGE_NAME##_package.h  ##PACKAGE_NAME##_symbiosis.h
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/module/##PACKAGE_NAME##/: ##PACKAGE_NAME##.vcxproj  ##PACKAGE_NAME##_l.vcxproj  CMakeLists.txt
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/module/##PACKAGE_NAME##/header/: pch.h
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/module/##PACKAGE_NAME##/resource/: ##PACKAGE_NAME##.rc
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/module/##PACKAGE_NAME##/source/: ##PACKAGE_NAME##.cpp
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/module/##PACKAGE_NAME##_test/: ##PACKAGE_NAME##_test.vcxproj  ##PACKAGE_NAME##_test.vcxproj.filters  CMakeLists.txt
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/organelle/module/##PACKAGE_NAME##_test/header/: pch.h
TargetCreation/Template/Package/Content/##PACKAGE_NAME##/source/property/: vvv_location_linux.props
Template/Package/##PACKAGE_NAME##/source/organelle/collection/##PACKAGE_NAME##/: ##PACKAGE_NAME##.vcxproj  CMakeLists.txt
Template/Package/##PACKAGE_NAME##/source/organelle/collection/##PACKAGE_NAME##/header/: pch.h
Template/Package/##PACKAGE_NAME##/source/organelle/collection/##PACKAGE_NAME##/source/: pch.cpp
(+62 files in other folders)
