add_subdirectory(source/configuration/##PACKAGE_NAME##_dna)
add_subdirectory(source/organelle/collection/##PACKAGE_NAME##)
add_subdirectory(source/organelle/common/##PACKAGE_NAME##_symbiosis)

add_subdirectory(source/organelle/module/##PACKAGE_NAME##)

add_subdirectory(source/organelle/common/##PACKAGE_NAME##_message)
