#/**************************************************************************************************************************************************************\
# *
# *  General
# *
#\**************************************************************************************************************************************************************/



project(##LIBRARY_NAME##)



#/**************************************************************************************************************************************************************/
# *
# *  Build target
# *
#/**************************************************************************************************************************************************************/



add_library(
	##LIBRARY_NAME##
	STATIC
	source/##UND_LIBRARY_NAME##.cpp
	source/pch.cpp
	header/pch.h
	../include/##LIBRARY_NAME##.h
	)



#/**************************************************************************************************************************************************************/
# *
# *  Output properties
# *
#/**************************************************************************************************************************************************************/



set_target_properties(##LIBRARY_NAME## PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${VVV_LibraryDir})



#/**************************************************************************************************************************************************************\
# *
# *  Preprocessor definitions and compiler flags
# *
#\**************************************************************************************************************************************************************/



target_compile_definitions(##LIBRARY_NAME## PRIVATE _##LIBRARY_NAME##_LIB_BUILD)
target_compile_options(##LIBRARY_NAME## PRIVATE ${VVV_AllCompilerFlags})
