#/**************************************************************************************************************************************************************/
# *
# *  General
# *
#/**************************************************************************************************************************************************************/



project(##PACKAGE_NAME##)



#/**************************************************************************************************************************************************************/
# *
# *  Build target
# *
#/**************************************************************************************************************************************************************/



add_library(
	##PACKAGE_NAME##
	STATIC
	source/pch.cpp
	header/pch.h
	../include/##PACKAGE_NAME##_library.h
	)



#/**************************************************************************************************************************************************************/
# *
# *  Output directory
# *
#/**************************************************************************************************************************************************************/



set_target_properties(##PACKAGE_NAME## PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${VVV_PackageCollectionLibDir})



#/**************************************************************************************************************************************************************\
# *
# *  Preprocessor definitions and compiler flags
# *
#\**************************************************************************************************************************************************************/



target_include_directories(##PACKAGE_NAME## PRIVATE ${VVV_PackageCollectionDir}/##PACKAGE_NAME##_face_${VVV_FaceType}/header)
#target_include_directories(##PACKAGE_NAME## PRIVATE ${VVV_PackageDir}/vvv_???other package/source/organelle/common/include)
target_compile_definitions(##PACKAGE_NAME## PRIVATE _VVV_ORGANELLE_LIB_BUILD)
target_compile_options(##PACKAGE_NAME## PRIVATE ${VVV_AllCompilerFlags})
