#/**************************************************************************************************************************************************************\
# *
# *  General
# *
#\**************************************************************************************************************************************************************/



project(##PACKAGE_NAME##_symbiosis)



#/**************************************************************************************************************************************************************/
# *
# *  Build target
# *
#/**************************************************************************************************************************************************************/



add_library(
	##PACKAGE_NAME##_symbiosis
	STATIC
	source/##UND_PACKAGE_NAME##_package.cpp
	source/pch.cpp
	header/pch.h
	../include/##PACKAGE_NAME##_exception.h
	../include/##PACKAGE_NAME##_package.h
	../include/##PACKAGE_NAME##_symbiosis.h
	)



#/**************************************************************************************************************************************************************/
# *
# *  Output directory
# *
#/**************************************************************************************************************************************************************/



set_target_properties(##PACKAGE_NAME##_symbiosis PROPERTIES ARCHIVE_OUTPUT_DIRECTORY ${VVV_PackageCommonLibDir})



#/**************************************************************************************************************************************************************\
# *
# *  Preprocessor definitions and compiler flags
# *
#\**************************************************************************************************************************************************************/



target_compile_definitions(##PACKAGE_NAME##_symbiosis PRIVATE _VVV_BASE_SYMBIOSIS_LIB_BUILD)
target_compile_options(##PACKAGE_NAME##_symbiosis PRIVATE ${VVV_AllCompilerFlags})